Fix spacing for sponsors

--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -205,6 +205,7 @@ img:hover {
     margin: 30px;
     text-align: center;
     max-width: 50%;
+    flex: 1 1 0px;
 }
 
 .sponsor-entry img {
